# windows-timezones

./: .gitignore  Cargo.toml  Justfile  README.md  schema.sql
.github/workflows/: rust.yml
generate/: Cargo.toml
generate/src/: main.rs
src/: generated.rs  lib.rs
