[package]
name = "windows-timezones"
version = "0.1.0"
edition = "2021"
description = "Windows timezone list from the Unicode CLDR project"
repository = "https://github.com/kyrias/windows-timezones"
license = "(MIT OR Apache-2.0) AND Unicode-DFS-2016"

[package.metadata.docs.rs]
features = ["chrono-tz", "schemars", "serde", "sqlx", "strum", "rustdoc"]

[workspace]
members = ["generate"]

[[bin]]
name = "update-schema"
required-features = ["update-schema"]

[dependencies]
anyhow = { version = "1.0.68", optional = true }
chrono-tz = { version = "0.8.1", optional = true }
heck = { version = "0.4.1", optional = true }
schemars = { version = "0.8.11", default-features = false, optional = true, features = ["derive"] }
serde = { version = "1.0.152", default-features = false, optional = true, features = ["derive"] }
sqlx = { version = "0.6.2", default-features = false, optional = true, features = ["macros"] }
strum = { version = "0.24.1", default-features = false, features = ["derive"], optional = true }

[features]
chrono-tz = ["dep:chrono-tz"]
schemars = ["dep:schemars"]
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
strum = ["dep:strum"]

## Internal features.
update-schema = ["anyhow", "heck", "strum"]
# SQLx doesn't compile without one of the runtime features enabled.
rustdoc = ["sqlx/runtime-tokio-native-tls"]
