[package]
name = "windows-timezones"
version = "0.1.1"
edition = "2021"
description = "Windows timezone list from the Unicode CLDR project"
repository = "https://github.com/kyrias/windows-timezones"
license = "(MIT OR Apache-2.0) AND Unicode-DFS-2016"

[package.metadata.docs.rs]
features = ["chrono-tz", "schemars", "serde", "sqlx", "strum", "rustdoc"]

[workspace]
members = ["generate"]

[[bin]]
name = "update-schema"
required-features = ["update-schema"]

[dependencies]
anyhow = { version = "1.0.71", optional = true }
chrono-tz = { version = "0.8.3", optional = true }
heck = { version = "0.4.1", optional = true }
schemars = { version = "0.8.12", default-features = false, optional = true, features = ["derive"] }
serde = { version = "1.0.165", default-features = false, optional = true, features = ["derive"] }
sqlx = { version = "0.6.3", default-features = false, optional = true, features = ["macros"] }
strum = { version = "0.25.0", default-features = false, features = ["derive"], optional = true }

[features]
chrono-tz = ["dep:chrono-tz"]
schemars = ["dep:schemars"]
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
strum = ["dep:strum"]

## Internal features.
update-schema = ["anyhow", "heck", "strum"]
# SQLx doesn't compile without one of the runtime features enabled.
rustdoc = ["sqlx/runtime-tokio-native-tls"]
