[package]
name = "windows-timezones"
version = "0.2.1"
edition = "2021"
description = "Windows timezone list from the Unicode CLDR project"
repository = "https://github.com/kyrias/windows-timezones"
license = "(MIT OR Apache-2.0) AND Unicode-DFS-2016"

[package.metadata.docs.rs]
features = ["chrono-tz", "schemars", "serde", "sqlx", "strum"]

[workspace]
members = ["generate"]

[[bin]]
name = "update-schema"
required-features = ["update-schema"]

[dependencies]
anyhow = { version = "1", optional = true }
chrono-tz = { version = "0.8", optional = true }
heck = { version = "0.4", optional = true }
schemars = { version = "0.8", default-features = false, optional = true, features = ["derive"] }
serde = { version = "1", default-features = false, optional = true, features = ["derive"] }
sqlx = { version = "0.7", default-features = false, optional = true, features = ["macros"] }
strum = { version = "0.25", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]

std = []
chrono-tz = ["dep:chrono-tz"]
schemars = ["dep:schemars"]
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
strum = ["dep:strum"]

## Internal features.
update-schema = ["anyhow", "heck", "strum"]
