[package]
name = "generate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
heck = "0.4.1"
proc-macro2 = { version = "1.0.63", default-features = false }
quick-xml = "0.29.0"
quote = { version = "1.0.29", default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = ["default-tls", "blocking"] }
